# hand-activity-recognition

./: README.rst
model/run_inf_int_win/: run_inf_int_win.ino
model/run_inf_int_win/src/neuton/source/dsp/: CMakeLists.txt
model/run_inf_int_win/src/neuton/source/dsp/fast_math/: CMakeLists.txt  neuton_dsp_sqrt.c
model/run_inf_int_win/src/neuton/source/dsp/pipeline/: CMakeLists.txt  neuton_dsp_pipeline_f32.c  neuton_dsp_pipeline_i16.c  neuton_dsp_pipeline_i8.c
model/run_inf_int_win/src/neuton/source/dsp/pipeline/spectral/: CMakeLists.txt  neuton_dsp_pipeline_spectr_f32.c  neuton_dsp_pipeline_spectr_i16.c  neuton_dsp_pipeline_spectr_i8.c
model/run_inf_int_win/src/neuton/source/dsp/pipeline/statistic/: CMakeLists.txt  neuton_dsp_pipeline_stat_f32.c  neuton_dsp_pipeline_stat_i16.c  neuton_dsp_pipeline_stat_i8.c
model/run_inf_int_win/src/neuton/source/dsp/spectral/: CMakeLists.txt
model/run_inf_int_win/src/neuton/source/dsp/spectral/findpeaks/: CMakeLists.txt  neuton_dsp_findpeaks_f32.c  neuton_dsp_findpeaks_i16.c  neuton_dsp_findpeaks_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/: CMakeLists.txt
model/run_inf_int_win/src/neuton/source/dsp/statistic/abs_max/: CMakeLists.txt  neuton_dsp_absmax_f32.c  neuton_dsp_absmax_i16.c  neuton_dsp_absmax_i32.c  neuton_dsp_absmax_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/abs_mean/: CMakeLists.txt  neuton_dsp_absmean_f32.c  neuton_dsp_absmean_i16.c  neuton_dsp_absmean_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/abs_min/: CMakeLists.txt  neuton_dsp_absmin_f32.c  neuton_dsp_absmin_i16.c  neuton_dsp_absmin_i32.c  neuton_dsp_absmin_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/abs_sum/: CMakeLists.txt  neuton_dsp_abssum_f32.c  neuton_dsp_abssum_i16.c  neuton_dsp_abssum_i32.c  neuton_dsp_abssum_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/all/: CMakeLists.txt  neuton_dsp_statistics_all.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/amdf/: CMakeLists.txt  neuton_dsp_amdf_f32.c  neuton_dsp_amdf_i16.c  neuton_dsp_amdf_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/kurtosis/: CMakeLists.txt  neuton_dsp_kur_f32.c  neuton_dsp_kur_i16.c  neuton_dsp_kur_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/max/: CMakeLists.txt  neuton_dsp_max_f32.c  neuton_dsp_max_i16.c  neuton_dsp_max_i32.c  neuton_dsp_max_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/mean/: CMakeLists.txt  neuton_dsp_mean_f32.c  neuton_dsp_mean_i16.c  neuton_dsp_mean_i32.c  neuton_dsp_mean_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/mean_absdev/: CMakeLists.txt  neuton_dsp_mad_f32.c  neuton_dsp_mad_i16.c  neuton_dsp_mad_i32.c  neuton_dsp_mad_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/mean_crossing/: CMakeLists.txt  neuton_dsp_mcr_f32.c  neuton_dsp_mcr_i16.c  neuton_dsp_mcr_i32.c  neuton_dsp_mcr_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/min/: CMakeLists.txt  neuton_dsp_min_f32.c  neuton_dsp_min_i16.c  neuton_dsp_min_i32.c  neuton_dsp_min_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/min_max/: CMakeLists.txt  neuton_dsp_min_max_f32.c  neuton_dsp_min_max_i16.c  neuton_dsp_min_max_i32.c  neuton_dsp_min_max_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/moments/: CMakeLists.txt  neuton_dsp_moments_f32.c  neuton_dsp_moments_i16.c  neuton_dsp_moments_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/peak2peak/: CMakeLists.txt
model/run_inf_int_win/src/neuton/source/dsp/statistic/range/: CMakeLists.txt  neuton_dsp_range_f32.c  neuton_dsp_range_i16.c  neuton_dsp_range_i32.c  neuton_dsp_range_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/rms/: CMakeLists.txt  neuton_dsp_rms_f32.c  neuton_dsp_rms_i16.c  neuton_dsp_rms_i32.c  neuton_dsp_rms_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/rssq/: CMakeLists.txt  neuton_dsp_rssq_f32.c  neuton_dsp_rssq_i16.c  neuton_dsp_rssq_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/skewness/: CMakeLists.txt  neuton_dsp_skew_f32.c  neuton_dsp_skew_i16.c  neuton_dsp_skew_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/stddev/: CMakeLists.txt  neuton_dsp_stddev_f32.c  neuton_dsp_stddev_i16.c  neuton_dsp_stddev_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/sum/: CMakeLists.txt  neuton_dsp_sum_f32.c  neuton_dsp_sum_i16.c  neuton_dsp_sum_i32.c  neuton_dsp_sum_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/threshold_crossing/: CMakeLists.txt  neuton_dsp_tcr_f32.c  neuton_dsp_tcr_i16.c  neuton_dsp_tcr_i32.c  neuton_dsp_tcr_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/tss/: CMakeLists.txt  neuton_dsp_tss_f32.c  neuton_dsp_tss_i16.c  neuton_dsp_tss_i32.c  neuton_dsp_tss_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/tss_sum/: CMakeLists.txt  neuton_dsp_tss_sum_f32.c  neuton_dsp_tss_sum_i16.c  neuton_dsp_tss_sum_i32.c  neuton_dsp_tss_sum_i8.c
model/run_inf_int_win/src/neuton/source/dsp/statistic/variance/: CMakeLists.txt  neuton_dsp_var_f32.c  neuton_dsp_var_i16.c  neuton_dsp_var_i8.c
model/run_inf_int_win/src/neuton/source/dsp/support/: CMakeLists.txt
model/run_inf_int_win/src/neuton/source/dsp/transform/: CMakeLists.txt
model/run_inf_int_win/src/neuton/source/nn/: CMakeLists.txt  neuton_nn.c  neuton_nn_data_prep_helper.c  neuton_nn_data_prep_helper.h  neuton_nn_inference_engine.c  neuton_nn_inference_engine.h  neuton_nn_user_config_resolver.h
model/run_inf_int_win/src/neuton/source/utils/: CMakeLists.txt
model/run_inf_int_win/src/neuton/source/utils/ordered_sliding_window/: CMakeLists.txt  neuton_osl_window_feed_f32.c  neuton_osl_window_feed_i16.c  neuton_osl_window_feed_i8.c  neuton_osl_window_init.c
model/run_inf_int_win/src/neuton/source/utils/ordered_window/: CMakeLists.txt  neuton_ordered_window_feed_f32.c  neuton_ordered_window_feed_i16.c  neuton_ordered_window_feed_i8.c  neuton_ordered_window_init.c
model/run_inf_int_win/src/neuton/source/utils/sliding_window/: CMakeLists.txt  neuton_sliding_window.c
(+110 files in other folders)
